--- a/navBar/style.css
+++ b/navBar/style.css
@@ -2,22 +2,42 @@
     background-color: #2A3647;
     height: 100vh;
     width: 232px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .iconNavBar{
-    height: ;
+    height:120px;
+    width: 100px;
+    padding-top: 64px;
+    padding-left:66px;
 }
 
 .Menu{
 display: flex;
 flex-direction: column;
+width: 232px;
+height: 46px;
+gap: 8px;
+}
+
+a{
+    color: white;
+text-decoration: none;
+display: flex;
 }
 
 .link{
-color: white;
-text-decoration: none;
-display: flex;
+    height: 46px;
+    width: 232px;
+    display: flex;
+    align-items: center;
+    gap: 8px
+}
 
+.link:hover{
+   background-color:  #091931
 }
 
 .menuLinkIcon{
