--- a/header-navbar/styles/navbar.css
+++ b/header-navbar/styles/navbar.css
@@ -1,6 +1,6 @@
 nav{
   height:100vh;
-  width:15%;
+  width:16%;
   position:fixed;
   left:0;
   display:flex;
@@ -19,36 +19,34 @@ nav{
   justify-content: space-between;
   align-items: center;
   height:100vh;
+  width:100%;
   margin-top:100px;
   margin-bottom:60px;
 }
+.menu-buttons {
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .summery-button, .add-tast-button, .board-button, .contacts-button {
   display:flex;
   flex-direction: row;
   align-items: center;
-  width:15%;
+  justify-content:start;
+  margin-left:50%;
+  width:100%;
   gap:8px;
 }
 .nav-icon{
-  width:40px;
-  height:40px;
+  width:32px;
+  height:32px;
 }
 p{
   font-size:20px;
   color:white;
-}
-
-.summery-button:hover{
-  color:rgb(9, 25, 49);
-}
-.add-tast-button{
-  color:rgb(9, 25, 49);
-}
-.board-button{
-  color:rgb(9, 25, 49);
-}
-.contacts-button{
-  color:rgb(9, 25, 49);
 }
 
 
