--- a/header-navbar/styles/header.css
+++ b/header-navbar/styles/header.css
@@ -1,41 +1,50 @@
-header{
-  display:flex;
-  align-items:center;
+header {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  position:absolute;
-  right:0;
-  width:84%;
-  height:100px;
+  width: 100%;
+  height: 100px;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
 }
-h4{
-  margin-left:120px;
-  font-size:20px;
+
+h4 {
+  margin-left: 120px;
+  font-size: 20px;
 }
+
 .mobile-logo {
-  display:none;
+  display: none;
 }
-.header-div{
-  display:flex;
+
+.header-div {
+  display: flex;
   align-items: center;
-  gap:16px;
+  gap: 16px;
 }
-.question-icon{
-  width:40px;
+
+.question-icon {
+  width: 40px;
 }
-.account{
-  width:60px;
-  height:60px;
-  border:solid 3px black;
-  border-radius:40px;
-  margin-right:60px;
-  display:flex;
-  align-items:center;
+
+.account {
+  width: 60px;
+  height: 60px;
+  border: solid 3px black;
+  border-radius: 40px;
+  margin-right: 60px;
+  display: flex;
+  align-items: center;
   justify-content: center;
   cursor: pointer;
 }
-.account p{
-  color:rgb(41, 171, 226);
-  font-size:24px;
-  font-weight:600;
+
+.account p {
+  color: rgb(41, 171, 226);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.rightSide {
+  width: 80%;
+  height: 100vh;
 }
