--- a/header-navbar/styles/standart.css
+++ b/header-navbar/styles/standart.css
@@ -2,4 +2,8 @@ body{
   margin:0;
   font-family: 'Inter', sans-serif;
   font-weight: 270;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
