--- a/contactsView/style/overlay.css
+++ b/contactsView/style/overlay.css
@@ -13,6 +13,33 @@
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
     z-index: 10;
     background-color: white;
+    transition: transform 1.0s ease-in-out;
+}
+
+.slide-in {
+    animation: slide-in 1.0s forwards;
+}
+
+@keyframes slide-in {
+    from {
+        transform: translate(100%, -50%);
+    }
+    to {
+        transform: translate(-50%, -50%);
+    }
+}
+
+.slide-out {
+    animation: slide-out 1.0s forwards;
+}
+
+@keyframes slide-out {
+    from {
+        transform: translate(-50%, -50%);
+    }
+    to {
+        transform: translate(100%, -50%);
+    }
 }
 
 .logoDiv {
@@ -154,6 +181,7 @@
     border-radius: 10px;
     background: transparent;
     font-size: 18px;
+    color: #2A3647;
 }
 
 .createBtn {
