--- a/header-navbar/styles/navbar.css
+++ b/header-navbar/styles/navbar.css
@@ -1,17 +1,18 @@
-nav {
+.leftSide {
+  width: 16%;
   height: 100vh;
+  position:fixed;
+  left:0;
+}
+
+nav {
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgb(42, 54, 71);
 }
-
-.logo {
-  width: 140px;
-  margin-top: 60px;
-}
-
 .menu {
   display: flex;
   flex-direction: column;
@@ -22,13 +23,17 @@ nav {
   margin-top: 100px;
   margin-bottom: 60px;
 }
-
 .menu-buttons {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.logo {
+  width: 120px;
+  margin-top: 60px;
 }
 
 .summery-button,
@@ -92,7 +97,3 @@ p {
   font-weight: bold;
 }
 
-.leftSide {
-  width: 20%;
-  height: 100vh;
-}
