--- a/helpView/styles/header.css
+++ b/helpView/styles/header.css
@@ -1,12 +1,17 @@
-header{
-  display:flex;
-  align-items:center;
+.rightSide {
+  width: 84%;
+}
+header {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  position:absolute;
+  position:fixed;
+  top:0;
   right:0;
-  width:84%;
-  height:100px;
+  width: 84%;
+  height: 100px;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
+  background-color:white;
 }
 h4{
   margin-left:120px;
