--- a/legalNotice/styles/legal-notice.css
+++ b/legalNotice/styles/legal-notice.css
@@ -1,8 +1,9 @@
 body {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
-section {
+.rightSide {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,7 +15,7 @@ main {
   justify-content: center;
   margin-left: 16%;
   margin-top: 100px;
-  width: 68%;
+  width: 80%;
 }
 
 .arrow-icon {
@@ -32,17 +33,12 @@ h1 {
 h2 {
   font-size:32px;
   font-weight:800;
-  margin:10px 0px 20px 0px;
+  margin:10px 0px 10px 0px;
 }
 h3 {
   font-size:28px;
   font-weight:800;
   margin:0px 0px 20px 0px;
-}
-.h4 {
-  font-size:24px;
-  font-weight:800;
-  margin:0;
 }
 main p {
   color:black;
@@ -51,21 +47,13 @@ main p {
   margin:0px 0px 20px 0px;
   
 }
-
-.how-to-use-div {
-  display:flex;
-}
-.number {
-  font-size:32px;
-  font-weight:800;
-  margin-right:40px;
-}
-.enjoy-h3 {
-  margin:40px 0 40px 0;
-}
-.blue {
-  color: rgb(41, 171, 226);
-}
 a {
   text-decoration: none;
+}
+li {
+  color:black;
+  font-size:20px;
+  font-weight:500;
+  margin:0px 0px 10px 0px;
+  
 }
