--- a/header-navbar/styles/header.css
+++ b/header-navbar/styles/header.css
@@ -1,17 +1,14 @@
 .rightSide {
   width: 84%;
-  height: 100vh;
 }
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position:fixed;
-  top:0;
-  right:0;
-  width: 84%;
+  width: 100%;
   height: 100px;
-  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  background-color:white;
 }
 
 h4 {
