--- a/contactsView/style/assets.css
+++ b/contactsView/style/assets.css
@@ -13,6 +13,21 @@
     margin-bottom: 16px;
     font-size: 18px;
     cursor: pointer;
+    body
+}
+
+.addContactBtn:hover{
+    background: #29ABE2;
+    border: 1px solid #29abe2;
+    box-shadow: 0px 4px 10px 0px #000000;
+    transition: 0.2s ease;
+}
+
+.addContactBtn:active{
+    background-color: #472a2a4a;
+    border: 1px solid #472a2a4a;
+    box-shadow: 0px 4px 10px 0px #000000;
+    transition: 0.2s ease;
 }
 
 .contactsHeader {
