--- a/header-navbar/styles/navbar.css
+++ b/header-navbar/styles/navbar.css
@@ -1,7 +1,6 @@
 .leftSide {
   width: 16%;
-  height: 100vh;
- 
+  height: 100%;
 }
 
 nav {
@@ -51,6 +50,13 @@ nav {
   gap: 8px;
 }
 
+.summery-button:hover,
+.add-tast-button:hover,
+.board-button:hover,
+.contacts-button:hover {
+  background-color: #0919317a;
+}
+
 .summery-button:active,
 .add-tast-button:active,
 .board-button:active,
@@ -64,7 +70,8 @@ nav {
 }
 
 p {
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: 300;
   color: white;
 }
 
@@ -77,13 +84,13 @@ p {
 .privacy-policy {
   color: rgb(113, 120, 129);
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .legal-notice {
   color: rgb(113, 120, 129);
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .privacy-policy:hover {
