--- a/loginView/styles/assets.css
+++ b/loginView/styles/assets.css
@@ -67,7 +67,7 @@ h1::after {
   background-color: #29abe2;
   box-shadow: 0px 4px 10px 0px #000000;
   transition: 0.2s ease;
-  border: none;
+  border: 1px solid #29abe2;
 }
 
 .outlinedText:active {
