--- a/contactsView/style/style.css
+++ b/contactsView/style/style.css
@@ -6,7 +6,7 @@
     justify-content: start;
     align-items: center;
     flex-direction: column;
-   
+   height:calc(100vh - 100px);
 }
 
 .contactsInfo {
