--- a/contactsView/style/contact.css
+++ b/contactsView/style/contact.css
@@ -60,3 +60,10 @@
     color: white;
     border-radius: 50%;
 }
+
+#contactsContent {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+}
