--- a/contactsView/style/style.css
+++ b/contactsView/style/style.css
@@ -1,6 +1,6 @@
 .contacts {
     width: 30%;
-    height: 100vh;
+    height: 100%;
     background-color: white;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     display: flex;
@@ -11,7 +11,7 @@
 
 .contactsInfo {
     width: 70%;
-    height: 100vh;
+    height: 100%;
 }
 
 .contactsHeader {
