--- a/header-navbar/styles/responsive-navbar.css
+++ b/header-navbar/styles/responsive-navbar.css
@@ -78,6 +78,11 @@
 /* Mobile ab 768px */
 
 @media (max-width: 768px) {
+  .leftSide {
+    width: 100%;
+    height: 10%;
+    position:fixed;
+  }
   nav {
     height: 10%;
     width: 100%;
@@ -92,7 +97,7 @@
     padding-top:6px;
     padding-bottom:6px;
   }
-  .logo {
+  .join-logo {
     display: none;
   }
   .menu {
