--- a/contactsView/style/responsive-contact.css
+++ b/contactsView/style/responsive-contact.css
@@ -2,6 +2,98 @@
   display:none;
 }
 @media(max-width:768px) {
+  .overlay {
+    height: 80vh;
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 25px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+    z-index: 10;
+    background-color: white;
+    transition: transform 1.0s ease-in-out;
+  }
+  .logoDiv {
+    height: 100%;
+    width: 100%;
+    background-color: #2A3647;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+  }
+  .margin_bottom {
+    margin-bottom: 30px;
+    width: 90%;
+    font-size:28px;
+}
+.blueUnderline {
+  font-size: 28px;
+  position: relative;
+  color: white;
+}
+
+.blueUnderline::after {
+  content: '';
+  position: absolute;
+  bottom: -8px;
+  left: -12px;
+  height: 2px;
+  width: 120px;
+  background-color: #29ABE2;
+  transform: translateX(10px);
+}
+
+.overlayBigText {
+    width: 100%;
+    text-align: start;
+    font-size: 76px;
+    font-weight:700;
+    margin: 0;
+}
+
+
+.addContactDiv {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction:  column;
+}
+.photoSelectionDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 40%;
+
+}
+
+#profilePic {
+  height: 60px;
+  fill: white;
+  background-color: #D1D1D1;
+  border-radius: 100%;
+  padding: 10px;
+  margin-top:-40px;
+ 
+}
+
+
+
+
+
   .addContactBtn {
     width: 85%;
     height: 50px;
@@ -44,48 +136,13 @@
   flex-direction: column;
  height:calc(100vh - 100px);
 }
-.overlay {
-  height: 60vh;
-  width: 90vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 25px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-  z-index: 10;
-  background-color: white;
-  transition: transform 1.0s ease-in-out;
-}
-.logoDiv {
-  height: 100%;
-  width: 100%;
-  background-color: #2A3647;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-left-radius: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  color: white;
-}
+
+
 .logo img {
   display:none;
 }
 
-.addContactDiv {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction:  column;
-}
+
 
 .photoSelectionDiv {
   display: flex;
@@ -120,7 +177,25 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 }
+.buttons {
+  width: 88%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: row;
+  gap: 16px;
+}
 
+.cancelBtn {
+display:none;
+}
+.cancleImg {
+  display:none;
+}
+
+.createBtnMobile {
+
+} 
 }
 
 
