--- a/contactsView/style/responsive-contact.css
+++ b/contactsView/style/responsive-contact.css
@@ -1,7 +1,29 @@
 .addContactBtnMobile {
-  display:none;
+  display: none;
 }
-@media(max-width:768px) {
+.pointerMobile {
+  display: none;
+}
+@media (max-width: 1100px) {
+  .contactsHeader {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 40px;
+    margin-left: 40px;
+    gap: 30px;
+  }
+  .contactsHeaderText {
+    font-size: 40px;
+  }
+  .contactsSideText {
+    font-size: 22px;
+  }
+}
+
+/* Mobile Design */
+@media (max-width: 768px) {
   .overlay {
     height: 80vh;
     width: 90vw;
@@ -17,12 +39,13 @@
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
     z-index: 10;
     background-color: white;
-    transition: transform 1.0s ease-in-out;
+    transition: transform 1s ease-in-out;
+    display: none;
   }
   .logoDiv {
     height: 100%;
     width: 100%;
-    background-color: #2A3647;
+    background-color: #2a3647;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     border-bottom-left-radius: 0px;
@@ -32,67 +55,101 @@
     flex-direction: column;
     color: white;
   }
+
   .margin_bottom {
     margin-bottom: 30px;
     width: 90%;
-    font-size:28px;
-}
-.blueUnderline {
-  font-size: 28px;
-  position: relative;
-  color: white;
-}
-
-.blueUnderline::after {
-  content: '';
-  position: absolute;
-  bottom: -8px;
-  left: -12px;
-  height: 2px;
-  width: 120px;
-  background-color: #29ABE2;
-  transform: translateX(10px);
-}
-
-.overlayBigText {
+    font-size: 28px;
+  }
+  .overlayBigText {
     width: 100%;
     text-align: start;
     font-size: 76px;
-    font-weight:700;
+    font-weight: 700;
     margin: 0;
-}
+  }
+  .blueUnderline {
+    font-size: 28px;
+    position: relative;
+    color: white;
+  }
 
+  .blueUnderline::after {
+    content: "";
+    position: absolute;
+    bottom: -8px;
+    left: -12px;
+    height: 2px;
+    width: 120px;
+    background-color: #29abe2;
+    transform: translateX(10px);
+  }
 
-.addContactDiv {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction:  column;
-}
-.photoSelectionDiv {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 40%;
+  .addContactDiv {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .photoSelectionDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    margin-top: -50px;
+  }
+  #profilePic {
+    height: 120px;
+    fill: white;
+    background-color: #d1d1d1;
+    border-radius: 100%;
+    padding: 10px;
+    margin-top: -40px;
+  }
 
-}
-
-#profilePic {
-  height: 60px;
-  fill: white;
-  background-color: #D1D1D1;
-  border-radius: 100%;
-  padding: 10px;
-  margin-top:-40px;
- 
-}
-
-
-
-
+  .inputFieldDiv {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .closeButton {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    margin-bottom: 0px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  .pointerMobile {
+    display: block;
+    width: 60px;
+    height: 60px;
+  }
+  .inputFields {
+    width: 85%;
+    padding-inline: 10px;
+    height: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+  }
+  .buttons {
+    width: 88%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 16px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
 
   .addContactBtn {
     width: 85%;
@@ -102,294 +159,55 @@
     align-items: center;
     flex-direction: row;
     gap: 14px;
-    background-color: #2A3647;
+    background-color: #2a3647;
     color: white;
     border-radius: 8px;
     margin-top: 24px;
     margin-bottom: 16px;
     font-size: 18px;
     cursor: pointer;
-    display:none;
-}
-.addContactBtnMobile {
-  width: 60px;
+    display: none;
+  }
+  .addContactBtnMobile {
+    width: 60px;
     height: 60px;
-    display:block;
-    position:fixed;
-    bottom:140px;
-    right:30px;
-    background-color: #2A3647;
+    display: block;
+    position: fixed;
+    bottom: 140px;
+    right: 30px;
+    background-color: #2a3647;
     color: white;
     border-radius: 30px;
     cursor: pointer;
-}
-.contactsInfo {
-  display:none;
-}
-.contacts {
-  width: 100%;
-  background-color: white;
-  box-shadow:0px 4px 6px rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: column;
- height:calc(100vh - 100px);
-}
-
-
-.logo img {
-  display:none;
-}
-
-
-
-.photoSelectionDiv {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 20%;
-}
-
-#profilePic {
-  height: 70px;
-  fill: white;
-  background-color: #D1D1D1;
-  border-radius: 100%;
-  padding: 10px;
-  margin-top:-20px;
-}
-
-.inputFieldDiv {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 24px;
-}
-.inputFields {
-  width: 85%;
-  padding-inline: 10px;
-  height: 40px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-}
-.buttons {
-  width: 88%;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: row;
-  gap: 16px;
-}
-
-.cancelBtn {
-display:none;
-}
-.cancleImg {
-  display:none;
-}
-
-
-}
-
-
-
-
-
-
-
-
-/* .overlay {
-  height: 60vh;
-  width: 90vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 25px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-  z-index: 10;
-  background-color: white;
-  transition: transform 1.0s ease-in-out;
-}
-
-.slide-in {
-  animation: slide-in 1.0s forwards;
-}
-
-@keyframes slide-in {
-  from {
-      transform: translate(100%, -50%);
   }
-  to {
-      transform: translate(-50%, -50%);
+
+  .contacts {
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    height: calc(100vh - 100px);
+  }
+
+  .logo img {
+    display: none;
+  }
+  .contactsInfo {
+    display: none;
+  }
+  .pointer {
+    display: none;
+  }
+  .cancelBtn {
+    display: none;
+  }
+  .cancleImg {
+    display: none;
   }
 }
 
-.slide-out {
-  animation: slide-out 1.0s forwards;
+@media (max-width: 540px) {
 }
-
-@keyframes slide-out {
-  from {
-      transform: translate(-50%, -50%);
-  }
-  to {
-      transform: translate(100%, -50%);
-  }
-}
-
-.logoDiv {
-  height: 100%;
-  width: 40%;
-  background-color: #2A3647;
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  color: white;
-}
-
-.logo img {
-  width: 50px;
-}
-
-.logo {
-  width: 75%;
-  display: flex;
-  justify-content: start;
-}
-
-.margin_bottom {
-  margin-bottom: 30px;
-  width: 75%;
-}
-
-.overlayBigText {
-  width: 100%;
-  text-align: start;
-  font-size: 50px;
-  margin: 0;
-}
-
-.blueUnderline {
-  font-size: 18px;
-  position: relative;
-  color: white;
-}
-
-.blueUnderline::after {
-  content: '';
-  position: absolute;
-  bottom: -8px;
-  left: -12px;
-  height: 2px;
-  width: 60px;
-  background-color: #29ABE2;
-  transform: translateX(10px);
-}
-
-.addContactDiv {
-  height: 100%;
-  width: 60%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
-
-.photoSelectionDiv {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 20%;
-}
-
-#profilePic {
-  height: 70px;
-  fill: white;
-  background-color: #D1D1D1;
-  border-radius: 100%;
-  padding: 10px;
-}
-
-.inputFieldDiv {
-  height: 100%;
-  width: 80%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 24px;
-}
-
-.closeButton {
-  width: 100%;
-  text-align: end;
-  margin-bottom: 20px;
-}
-
-.inputFields {
-  width: 85%;
-  padding-inline: 10px;
-  height: 40px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-}
-
-
-
-.buttons {
-  width: 88%;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: row;
-  gap: 16px;
-}
-
-.cancelBtn {
-  width: 120px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  border: 1px solid #2A3647;
-  border-radius: 10px;
-  background: transparent;
-  font-size: 18px;
-  color: #2A3647;
-}
-
-.createBtn {
-  width: 215px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  background-color: #2A3647;
-  border-radius: 10px;
-  color: white;
-  font-size: 19px;
-}
-
-.d_none {
-  display: none;
-}
-
-.activateOverlay {
-  cursor: pointer;
-} */
