--- a/contactsView/style/overlay.css
+++ b/contactsView/style/overlay.css
@@ -144,19 +144,19 @@
 }
 
 #inputName {
-    background: url('/assets/icons/person.svg') no-repeat right center;
+    background: url('/assets/icon/person.svg') no-repeat right center;
     background-size: 20px;
     background-position: 95%;
 }
 
 #inputEmail {
-    background: url('/assets/icons/mail.svg') no-repeat right center;
+    background: url('/assets/icon/mail.svg') no-repeat right center;
     background-size: 20px;
     background-position: 95%;
 }
 
 #inputPhone {
-    background: url('/assets/icons/call.svg') no-repeat right center;
+    background: url('/assets/icon/call.svg') no-repeat right center;
     background-size: 20px;
     background-position: 95%;
 }
