--- a/contactsView/style/responsive-contact.css
+++ b/contactsView/style/responsive-contact.css
@@ -10,74 +10,105 @@
     justify-content: start;
     align-items: center;
     flex-direction: row;
-    gap: 14px;
-    background-color: #2A3647;
+    margin-top: 40px;
+    margin-left: 40px;
+    gap: 30px;
+  }
+  .contactsHeaderText {
+    font-size: 40px;
+  }
+  .contactsSideText {
+    font-size: 22px;
+  }
+  .overlayBigText {
+    font-size: 44px;
+  }
+  .blueUnderline {
+    font-size: 16px;
+  }
+  .blueUnderline::after {
+    width: 70px;
+  }
+  .smallText {
+    font-size: 16px;
+  }
+}
+@media (max-width: 1000px) {
+  .overlayBigText {
+    font-size: 36px;
+  }
+  .blueUnderline {
+    font-size: 12px;
+  }
+  .blueUnderline::after {
+    width: 50px;
+  }
+  .smallText {
+    font-size: 12px;
+  }
+}
+@media (max-width: 790px) {
+  .overlayBigText {
+    font-size: 32px;
+  }
+}
+
+
+/* Mobile Design */
+@media (max-width: 768px) {
+  .overlay {
+    height: 76vh;
+    width: 90vw;
+    flex-direction: column;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+    border: solid 0.1px hsla(0, 0%, 0%, 0.3)
+  }
+  
+  .logoDiv {
+    height: 100%;
+    width: 100%;
+    background-color: #2a3647;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     color: white;
-    border-radius: 8px;
-    margin-top: 24px;
-    margin-bottom: 16px;
-    font-size: 18px;
-    cursor: pointer;
-    display:none;
-}
-.addContactBtnMobile {
-  width: 60px;
-    height: 60px;
-    display:block;
-    position:fixed;
-    bottom:140px;
-    right:30px;
-    background-color: #2A3647;
+  }
+
+  .margin_bottom {
+    margin-bottom: 30px;
+    width: 90%;
+    font-size: 28px;
+  }
+  .overlayBigText {
+    width: 100%;
+    text-align: start;
+    font-size: 76px;
+    font-weight: 700;
+    margin: 0;
+  }
+  .smallText {
+    font-size: 28px;
+  }
+  .blueUnderline {
+    font-size: 28px;
+    position: relative;
     color: white;
-    border-radius: 30px;
-    cursor: pointer;
-}
-.contactsInfo {
-  display:none;
-}
-.contacts {
-  width: 100%;
-  background-color: white;
-  box-shadow:0px 4px 6px rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: column;
- height:calc(100vh - 100px);
-}
-.overlay {
-  height: 60vh;
-  width: 90vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 25px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-  z-index: 10;
-  background-color: white;
-  transition: transform 1.0s ease-in-out;
-}
-.logoDiv {
-  height: 100%;
-  width: 100%;
-  background-color: #2A3647;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-left-radius: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  color: white;
-}
-.logo img {
-  display:none;
-}
+  }
+
+  .blueUnderline::after {
+    content: "";
+    position: absolute;
+    bottom: -8px;
+    left: -12px;
+    height: 2px;
+    width: 120px;
+    background-color: #29abe2;
+    transform: translateX(10px);
+  }
 
   .addContactDiv {
     height: 100%;
