--- a/boardView/styles/board.css
+++ b/boardView/styles/board.css
@@ -1,84 +1,111 @@
 main {
-  height:100vh;
-
+  height: 100vh;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .upper-sec {
-  height:20%;
-  width:100%;
-  display:flex;
-  align-items:center;
+  height: 14%;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-
+  margin-left: 1%;
+  margin-right: 1%;
 }
 .upper-sec-right {
-  display:flex;
-  gap:8px;
+  display: flex;
+}
+.search-div {
+  display: flex;
+  align-items: center;
+}
+.search-div button {
+  border: none;
+  margin-left: -60px;
+  margin-right: 60px;
+  border-left: solid 0.5px rgb(197, 197, 197);
+  height: 24px;
+  width: 32px;
+  padding-left: 16px;
 }
 h1 {
-  font-size:48px;
+  font-size: 48px;
 }
 input {
-  width:320px;
-  height:48px;
-  border:solid 0.5px rgb(141, 141, 141);
-  border-radius:10px;
-}
-.add-task {
-  width:200px;
-  height:48px;
-  background-color: rgb(9, 25, 49);
-  color:white;
-  border:solid 0.5px rgb(141, 141, 141);
-  border-radius:10px;
-  font-size:20px;
-  font-weight:600;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-}
-.add-task {
-  fill:white;
-}
-
-
-.lower-sec {
-  height:80%;
-  width:100%;
-  display:flex;
-  justify-content: center;
+  width: 320px;
+  height: 44px;
+  border: solid 0.5px rgb(141, 141, 141);
+  border-radius: 10px;
+  cursor: pointer;
   
 }
+
+input::placeholder {
+  color: rgba(141, 141, 141, 0.562);
+  font-size: 20px;
+  padding-left: 16px;
+}
+.add-task {
+  width: 180px;
+  height: 48px;
+  background-color: rgb(9, 25, 49);
+  color: white;
+  border: solid 0.5px rgb(141, 141, 141);
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor: pointer;
+}
+.add-task:hover {
+  background-color: rgb(41, 171, 226);
+}
+.lower-sec {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 .columns {
-  width:25%;
-  height:100%;
-  display:flex;
-  flex-direction:column;
+  width: 24%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 .upper-column {
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  width:100%;
+  width: 100%;
 }
 .upper-column p {
-  font-size:22px;
-  font-weight:700;
-  color:rgb(66, 82, 110)
+  font-size: 22px;
+  font-weight: 700;
+  color: rgb(66, 82, 110);
+}
+.column-add-button:hover {
+  stroke:rgb(41, 171, 226);
+
+  cursor: pointer;
 }
 .lower-column {
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content:start;
-  height:100vh;
+  justify-content: start;
+  height: 100vh;
 }
 .no-task {
-  height:48px;
-  width:100%;background-color:rgb(231, 231, 231);
+  height: 48px;
+  width: 100%;
+  background-color: rgb(231, 231, 231);
   border: dashed 1px rgb(163, 163, 163);
-  border-radius:10px;
-  color:rgb(163, 163, 163);
-  display:flex;
+  border-radius: 10px;
+  color: rgb(163, 163, 163);
+  display: flex;
   justify-content: center;
   align-items: center;
 }
