--- a/boardView/styles/board.css
+++ b/boardView/styles/board.css
@@ -1,5 +1,6 @@
 main {
-  height: 100vh;
+  height: 89.5vh;
+  width:100%;
   margin-left: 5%;
   margin-right: 5%;
 }
@@ -10,6 +11,7 @@ main {
   justify-content: space-between;
   margin-left: 1%;
   margin-right: 1%;
+  margin-top:80px;
 }
 .upper-sec-right {
   display: flex;
@@ -28,7 +30,7 @@ main {
   padding-left: 16px;
 }
 h1 {
-  font-size: 48px;
+  font-size: 60px;
 }
 input {
   width: 320px;
@@ -51,12 +53,14 @@ input::placeholder {
   color: white;
   border: solid 0.5px rgb(141, 141, 141);
   border-radius: 10px;
-  font-size: 20px;
-  font-weight: 600;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   cursor: pointer;
+}
+.add-task p{
+  font-size: 20px;
+  font-weight: 600;
 }
 .add-task:hover {
   background-color: rgb(41, 171, 226);
