--- a/contactsView/style/standart.css
+++ b/contactsView/style/standart.css
@@ -5,4 +5,5 @@ body {
     align-items: center;
     flex-direction: row;
     font-family: 'Inter-Regular', sans-serif;
+    background-color: #F6F7F8;
 }
