--- a/boardView/styles/overlayAddTask.css
+++ b/boardView/styles/overlayAddTask.css
@@ -66,7 +66,7 @@
   .addTask {
     width: 80%;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: space-evenly;
     flex-direction: row;
   }
@@ -83,7 +83,6 @@
     transition: transform 0.3s ease;
   }
   .task {
-   
     display: flex;
     justify-content: center;
     align-items: start;
@@ -241,8 +240,6 @@
     font-size: 20px;
     font-weight: 400;
   }
-  
-  
   .subtasks {
     width: 100%;
     margin-bottom: 40px;
