--- a/boardView/styles/overlayAddTask.css
+++ b/boardView/styles/overlayAddTask.css
@@ -1,37 +1,41 @@
 .overlay {
-    height: 75vh;
-    width: 85vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: fixed;
-    top: 50%;
-    left: 100vw; /* Startposition rechts außerhalb des Bildschirms */
-    transform: translate(-50%, -50%);
-    border-radius: 25px;
-    box-shadow: 10px 5px 10px 0px rgba(0, 0, 0, 0.3);
-    z-index: 100;
-    background-color: white;
-    transition: left 1.0s ease-in-out, opacity 0.5s ease-in-out;
-    opacity: 0;
-    visibility: hidden;
+  height: 75vh;
+  width: 85vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 25px;
+  box-shadow: 10px 5px 10px 0px rgba(0, 0, 0, 0.3);
+  z-index: 100;
+  background-color: white;
+  transition: transform 0.5s ease-in-out;
 }
 
-.overlay.show {
-    left: 50%; /* Hereingleiten und im Zentrum bleiben */
-    opacity: 1;
-    visibility: visible;
+@keyframes slide-in {
+  from {
+      transform: translate(100%, -50%);
+  }
+  to {
+      transform: translate(-50%, -50%);
+  }
 }
 
-.overlay.hide {
-    left: 100vw; /* Rausgleiten nach rechts */
-    opacity: 0;
+.slide-out {
+  animation: slide-out 0.5s forwards;
 }
 
-/* Verzögerung, bevor visibility auf hidden gesetzt wird */
-.overlay.hide.hidden {
-    visibility: hidden;
+@keyframes slide-out {
+  from {
+      transform: translate(-50%, -50%);
+  }
+  to {
+      transform: translate(100%, -50%);
+  }
 }
 
 .description {
@@ -39,35 +43,36 @@
 }
 
 .overlay input {
-    width: 80%;
+  width: 80%;
 }
 
 .header {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
+  width: 90%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
 }
 
 .header img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .addTask {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
 .dropDownArrow {
-    position: relative;
-    right: -38%;
-    top: -22px;
-    transform: translateY(-50%);
-    pointer-events: none;
-    transition: transform 0.3s ease;
+  position: relative;
+  right: -38%;
+  top: -22px;
+  transform: translateY(-50%);
+  pointer-events: none;
+  transition: transform 0.3s ease;
 }
 
 .turnArrow {
@@ -90,11 +95,31 @@
 }
 
 .input-with-icon {
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+}
+
+.dateCategory {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.input-with-icon .calendar-icon {
+  position: absolute;
+  right: 6%;
+  top: 28.5%;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
 
 .description {
-  width: 600px;
+  width: 80%;
   height: 180px;
   resize: both;
   padding: 10px;
@@ -106,9 +131,9 @@
 }
 
 .description::placeholder {
-  position: absolute;
-  top: 20px;
-  left: 16px;
+  position: relative;
+  top: -57px;
+  left: 2px;
   transform: translateY(-50%);
   font-size: 20px;
   color: rgba(128, 128, 128, 0.5);
@@ -116,52 +141,80 @@
   margin: 0;
 }
 
-.container img {
+.containerDescription {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contact {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+
+.containerDescription img {
   position: absolute;
-  top: 63.6%;
-  left: 45.3%;
+  top: 62.5%;
+  right: 55.7%;
 }
 
 .contactSelection::placeholder {
   color: black;
 }
 
-
-.category-name {
-    margin:0 0 8px 0;
+#initialsOverlay {
+  width: 40px;
+  text-align: center;
 }
 
+form {
+  width: 30px;
+}
 
+#exampleCheckbox {
+  width: 20px;
+  font-weight: bold;
+}
 
-.right-side {
+#contactName {
+  width: 75%;
+  text-align: start;
+}
+
+.headerText {
+  width: 78%;
+  text-align: start;
+  color: black;
+}
+
+.overlayButtons {
+  width: 90%;
   display: flex;
-  flex-direction: column;
-  justify-content: start;
+  justify-content: end;
   align-items: center;
-  height: 100%;
-}
-.dateCategory {
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  flex-direction: column;
-  margin-bottom: 40px;
-}
-.input-with-icon .calendar-icon {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  pointer-events: none;
-}
-.dateInput {
-  width: 200px;
+  gap: 24px;
 }
 
+.d_none {
+  display: none;
+}
 
 .buttons-div p {
-    margin-right:8px;
+  margin-right: 8px;
 }
+
 .buttons-div {
   display: flex;
   justify-content: space-between;
@@ -169,55 +222,54 @@
   margin-bottom: 40px;
 }
 
-.urgent-button {
+.prioButton {
   width: 140px;
   height: 56px;
   background-color: white;
   border: solid 0.5px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-}
-.medium-button {
-  width: 140px;
-  height: 56px;
-  background-color: white;
-  border: solid 0.5px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
-}
-.low-button {
-  width: 140px;
-  height: 56px;
-  background-color: white;
-  border: solid 0.5px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
-}
-.urgent-button:active {
-    background-color:rgb(255, 61, 0);
-    border: solid 0.5px rgba(0, 0, 0, 0.1);
-    color:white;
-  }
-  .medium-button:active {
-    background-color:rgb(255, 168, 0);
-    border: solid 0.5px rgba(0, 0, 0, 0.1);
-    color:white;
-  }
-  .low-button:active {
-    background-color:rgb(122, 226, 41);
-    border: solid 0.5px rgba(0, 0, 0, 0.1);
-    color:white;
-  }
-.urgent-icon:active {
-    fill:white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  cursor: pointer;
 }
 
+.prioButton p {
+  color: black;
+}
 
+.redButton {
+  background-color: rgb(255, 61, 0);
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
+}
+
+.orangeButton {
+  background-color: rgb(255, 168, 0);
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
+  fill: rebeccapurple;
+}
+
+.greenButton {
+  background-color: rgb(122, 226, 41);
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
+}
+
+.whiteText {
+  color: white!important;
+}
+.whiteIcon {
+  fill: white;
+}
 
 .category {
   width: 100%;
-  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
+  align-items: center;
 }
+
 #categorySelect {
   width: 460px;
   height: 48px;
@@ -232,5 +284,14 @@
   margin-bottom: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
+  align-items: center;
+}
+
+.right-side {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
