overlay fertig fehlt nur die addTask function

--- a/boardView/styles/overlayAddTask.css
+++ b/boardView/styles/overlayAddTask.css
@@ -419,6 +419,9 @@ form {
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  position: absolute;
+  top: 73%;
+  right: 5.7%;
 }
 
 .editSubtaskDiv {
@@ -426,4 +429,18 @@ form {
   justify-content: center;
   align-items: center;
   flex-direction: row;
+}
+
+#editInput {
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid transparent;
+  outline: none;
+  text-decoration: none;
+  transition: border-color 0.3s ease;
+}
+
+#editInput:focus {
+  border-radius: 0;
+  border-bottom-color: blue;
 }
